# photo-workroom

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CI_CD.md  CONTRIBUTING.md  Cargo.toml  DATA_MODEL.md  DEBT_REGISTER.md  DECISIONS.md  DEPENDENCY_POLICY.md  INGEST_PIPELINE.md  IPTC_FIELD_MAP.md  METADATA_SYSTEM.md  PERFORMANCE.md  PLANNING.md  README.md  README_INDEX.md  REPO_STRUCTURE.md  RESEARCH_SUMMARY.md  ROADMAP.md  SECURITY.md  SOURCE_PATTERN_SYNTHESIS.md  TECH_STACK.md  TESTING.md  UX_WORKFLOWS.md  deep-research-report.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: bootstrap-validation.yml
apps/main-app/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.e2e.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
apps/main-app/src/: App.css  App.e2e.test.tsx  App.tsx  index.css
apps/main-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/main-app/src-tauri/capabilities/: default.json
apps/main-app/src-tauri/src/: lib.rs  main.rs
benchmarks/: README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql  0002_keyword_and_preview.sql
crates/image/: Cargo.toml
crates/ingest/: Cargo.toml
crates/metadata/: Cargo.toml
crates/task_runtime/: Cargo.toml
examples/: IPTC_Fields.XMP
scripts/: README.md  tauri-launch-smoke.mjs
tests/: README.md
tests/validation/: BOOTSTRAP_VALIDATION.md
(+13 files in other folders)
